tests/error/error14.nex
class A
{
}

class A
{
}

new A;
